@@ -3,7 +3,7 @@
 # This script cleans the Instant cache
 
 __author__ = "Ilmar Wilbers (ilmarw@simula.no)"
-__date__ = "2008-08-08 -- 2008-09-01"
+__date__ = "2008-08-08 -- 2011-06-17"
 __copyright__ = "Copyright (C) 2008 Ilmar Wilbers"
 __license__  = "GNU GPL version 3 or any later version"
 
@@ -29,13 +29,16 @@ for d in tmp_dirs:
 
 # Get default cache dir (won't and can't touch userdefined cache dirs in this script)
 cache_dir = instant.get_default_cache_dir()
+error_dir = instant.get_default_error_dir()
 
 # Check if directory exists (it always should after calling get_default_cache_dir)
 assert os.path.isdir(cache_dir)
+assert os.path.isdir(error_dir)
 
 # Get list of cached forms
 modules = os.listdir(cache_dir)
-if len(modules) == 0:
+error_logs = os.listdir(error_dir)
+if len(modules+error_logs) == 0:
     print "Instant cache is empty"
     sys.exit(0)
 
@@ -45,6 +48,11 @@ modules   = [m for m in modules if not m.endswith(".lock")]
 print "Removing %d modules from Instant cache..." % len(modules)
 for module in modules:
     directory = os.path.join(cache_dir, module)
+    shutil.rmtree(directory, ignore_errors=True)
+
+print "Removing %d error logs from Instant cache..." % len(error_logs)
+for error_log in error_logs:
+    directory = os.path.join(error_dir, error_log)
     shutil.rmtree(directory, ignore_errors=True)
 
 print "Removing %d lock files from Instant cache..." % len(lockfiles)
