@@ -1,3 +1,5 @@
+ - Error log is now copied to ./instant/error/module_name/config.log
+   for easier retrieval
 0.9.10 [2011-05-16]
  - Added support for setting swig binary and swig path
 0.9.9 [2011-02-23]
